--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
 
-    <div id="titanic"></div>
-
+    <div id="titanic">
+    <!-- Passenger Div -->
+    </div>
+    <div id="titanic-embarked">
+      <!-- Bars -->
+    </div>
     <script src="script.js" type="module"></script>
   </body>
 </html>
