adding sort buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <div id="titanic">
     <!-- Passenger Div -->
     </div>
+    <div>
+      <button class="sort-by-age">Sort by Age</button>
+      <button class="sort-by-fare">Sort by Fare</button>
+      <button class="sort-by-embarked">Sort by Embarked</button>
+    </div>
+
+    <div id="passenger-details">
+      <!-- Passenger Info Here -->
+    </div>
+
     <div id="titanic-embarked">
       <!-- Bars -->
     </div>
