--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <button class="sort-by-age">Sort by Age</button>
       <button class="sort-by-fare">Sort by Fare</button>
       <button class="sort-by-embarked">Sort by Embarked</button>
+      <button class="sort-by-gender">Sort by Gender</button>
+      <button class="sort-by-pclass">Sort by pclass</button>
     </div>
 
     <div id="passenger-details">
