adding button styles and legend

--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-
+    <h1>Titanic Visual</h1>
+    <div class="legend"> 
+      <h3>Legend</h3>
+      <ul>
+        <li>Men: Square</li>
+        <li>Women: Circle</li>
+        <li>Pclass 1: Border Blue</li>
+        <li>Pclass 2: Border Red</li>
+        <li>Pclass 3: Border Green</li>
+        <li>Survived: Full Opacity</li>
+        <li>Embarked: Color of Shape</li>
+      </ul>
+    </div>
     <div id="titanic">
     <!-- Passenger Div -->
     </div>
-    <div>
+    <div class='button-class'>
       <button class="sort-by-age">Sort by Age</button>
       <button class="sort-by-fare">Sort by Fare</button>
       <button class="sort-by-embarked">Sort by Embarked</button>
